# htmlayout

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md
docs/: architecture.md
src/: CMakeLists.txt  from_chars_compat.h
src/css/: CMakeLists.txt  cascade.cpp  cascade.h  color.cpp  color.h  parser.cpp  parser.h  properties.cpp  properties.h  selector.cpp  selector.h  tokenizer.cpp  tokenizer.h  transform.cpp  transform.h  ua_stylesheet.cpp  ua_stylesheet.h
src/layout/: CMakeLists.txt  block.cpp  block.h  box.cpp  box.h  flex.cpp  flex.h  formatting_context.cpp  formatting_context.h  grid.cpp  grid.h  inline.cpp  inline.h  multicol.cpp  multicol.h  style_util.h  table.cpp  table.h  text.cpp  text.h  text_geometry.cpp  text_geometry.h
tests/: CMakeLists.txt  main.cpp  test_calc.cpp  test_calc.h  test_cascade.cpp  test_cascade.h  test_coverage.cpp  test_coverage.h  test_final.cpp  test_final.h  test_flex.cpp  test_flex.h  test_foundation.cpp  test_foundation.h  test_grid.cpp  test_grid.h  test_helpers.h  test_hittest.cpp  test_hittest.h  test_inline.cpp  test_inline.h  test_layout.cpp  test_layout.h  test_parser.cpp  test_parser.h  test_remaining.cpp  test_remaining.h  test_selector.cpp  test_selector.h  test_shorthand.cpp  test_shorthand.h  test_spec_completeness.cpp  test_spec_completeness.h  test_spec_validator.cpp  test_spec_validator.h  test_tokenizer.cpp  test_tokenizer.h  test_webcomponents.cpp  test_webcomponents.h
